Show ellipsis when card header text goes over 1 line

--- a/resources/js/components/pages/HomeComponent.scss
+++ b/resources/js/components/pages/HomeComponent.scss
@@ -10,3 +10,9 @@
 .home-card > .card-body {
     height: 150px;
 }
+
+.home-card .card-header h4 {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
